Added Falling Block and Breaking Platform

--- a/Ad_Nauseum/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Ad_Nauseum/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -20,7 +20,7 @@ MaterialQualityLevel=1
 [/Script/UnrealEd.LevelEditorPlaySettings]
 NewWindowWidth=1152
 NewWindowHeight=648
-NewWindowPosition=(X=1979,Y=151)
+NewWindowPosition=(X=379,Y=179)
 GameGetsMouseControl=False
 MouseControlLabelPosition=LabelAnchorMode_TopLeft
 ViewportGetsHMDControl=False
@@ -92,7 +92,7 @@ Common=False
 User Created=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Ad_Nauseum/Blueprints/Weapons
+ContentBrowserTab1.SelectedPaths=/Game/Ad_Nauseum/Blueprints/Traps
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -117,10 +117,10 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/Ad_Nauseum/Levels/Level_1
 
 [AssetEditorManager]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Ad_Nauseum/Blueprints/General/BulletGeneral.BulletGeneral
-OpenAssetsAtExit=/Game/Ad_Nauseum/Blueprints/Traps/Falling_Block.Falling_Block
-OpenAssetsAtExit=/Game/Ad_Nauseum/Blueprints/Weapons/GreenBullet.GreenBullet
+CleanShutdown=True
+OpenAssetsAtExit=/Game/Ad_Nauseum/Blueprints/Traps/Falling_B.Falling_B
+OpenAssetsAtExit=/Game/Ad_Nauseum/Blueprints/Traps/Breaking_Platform.Breaking_Platform
+OpenAssetsAtExit=/Game/Ad_Nauseum/Blueprints/Weapons/BlueBullet.BlueBullet
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -701,8 +701,8 @@ REINST_Slimey_C_111.Events=True
 ProjectileMovementComponent.Variable=True
 ProjectileMovementComponent.Sockets=True
 ProjectileMovementComponent.Projectile=True
-ProjectileMovementComponent.ProjectileBounces=True
-ProjectileMovementComponent.ProjectileSimulation=True
+ProjectileMovementComponent.ProjectileBounces=False
+ProjectileMovementComponent.ProjectileSimulation=False
 ProjectileMovementComponent.Homing=True
 ProjectileMovementComponent.Velocity=True
 ProjectileMovementComponent.PlanarMovement=False
@@ -1138,10 +1138,59 @@ Falling_Block_C.Input=True
 Falling_Block_C.Actor=True
 Falling_Block_C.TransformCommon=True
 Actor.Warning=True
+K2Node_VariableSet.Events=True
+REINST_Slimey_C_186.None=True
+REINST_Slimey_C_186.Tick=True
+REINST_Slimey_C_186.Character=True
+REINST_Slimey_C_186.Camera=True
+REINST_Slimey_C_186.Pawn=True
+REINST_Slimey_C_186.Rendering=True
+REINST_Slimey_C_186.Replication=True
+REINST_Slimey_C_186.Input=True
+REINST_Slimey_C_186.Actor=True
+REINST_Slimey_C_202.None=True
+REINST_Slimey_C_202.Tick=True
+REINST_Slimey_C_202.Character=True
+REINST_Slimey_C_202.Camera=True
+REINST_Slimey_C_202.Pawn=True
+REINST_Slimey_C_202.Rendering=True
+REINST_Slimey_C_202.Replication=True
+REINST_Slimey_C_202.Input=True
+REINST_Slimey_C_202.Actor=True
+SkeletalMeshComponent.Variable=True
+SkeletalMeshComponent.TransformCommon=True
+SkeletalMeshComponent.Sockets=True
+SkeletalMeshComponent.Animation=True
+SkeletalMeshComponent.Mesh=True
+SkeletalMeshComponent.Clothing=True
+SkeletalMeshComponent.Physics=True
+SkeletalMeshComponent.Collision=True
+SkeletalMeshComponent.Lighting=True
+SkeletalMeshComponent.Rendering=True
+SkeletalMeshComponent.Tags=True
+SkeletalMeshComponent.ComponentReplication=True
+SkeletalMeshComponent.Activation=True
+SkeletalMeshComponent.Cooking=True
+SkeletalMeshComponent.Events=True
+Breaking_Platform2_C.Tick=True
+Breaking_Platform2_C.Rendering=True
+Breaking_Platform2_C.Replication=True
+Breaking_Platform2_C.Input=True
+Breaking_Platform2_C.Actor=True
+Falling_B_C.Tick=True
+Falling_B_C.Rendering=True
+Falling_B_C.Replication=True
+Falling_B_C.Input=True
+Falling_B_C.Actor=True
+Breaking_Platform_C.Tick=True
+Breaking_Platform_C.Rendering=True
+Breaking_Platform_C.Replication=True
+Breaking_Platform_C.Input=True
+Breaking_Platform_C.Actor=True
 
 [DetailPropertyExpansion]
 PaperFlipbook="\"Object.Sprite.KeyFrames\" \"Object.Sprite.KeyFrames.KeyFrames[0]\" "
-Object="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Object="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
@@ -1154,11 +1203,11 @@ REINST_Slimey_C_154="\"Object.Character.CharacterMovement.Object.NavMovement.Nav
 REINST_Slimey_C_158="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_Slimey_C_162="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[5]\" "
-BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ActorComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ActorComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PaperSpriteComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PaperSprite="\"Object.Sprite.Sockets\" "
@@ -1173,6 +1222,8 @@ REINST_Slimey_C_436="\"Object.Character.CharacterMovement.Object.NavMovement.Nav
 REINST_Slimey_C_448="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_Slimey_C_470="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SkeletalMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SkinnedMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Ad_Nauseum/Flipbooks/SlimeyIdle.SlimeyIdle=1
@@ -1237,11 +1288,12 @@ StaticMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyIn
 /Game/Ad_Nauseum/Textures/Bullet.Bullet=1
 /Game/Ad_Nauseum/Textures/BlueBullet.BlueBullet=1
 /Game/Ad_Nauseum/Textures/BlueBullet_Sprite.BlueBullet_Sprite=1
-/Game/Ad_Nauseum/Blueprints/Weapons/BlueBullet.BlueBullet=1
+/Game/Ad_Nauseum/Blueprints/Weapons/BlueBullet.BlueBullet=0
 /Game/Ad_Nauseum/Blueprints/General/PlasmaPickup.PlasmaPickup=1
 /Game/Ad_Nauseum/Sprites/BlueBullet_Sprite.BlueBullet_Sprite=1
-/Game/Ad_Nauseum/Blueprints/General/SlimeyStates.SlimeyStates=1
+/Game/Ad_Nauseum/Blueprints/General/SlimeyStates.SlimeyStates=0
 /Game/Ad_Nauseum/Sprites/Dirt_Block_Sprite_0.Dirt_Block_Sprite_0=1
+/Game/Ad_Nauseum/Blueprints/Traps/Falling_Block.Falling_Block=1
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.Lightmass.Lightmaps,WorldSettings.GameMode.SelectedGameModeDetails,
@@ -1294,11 +1346,12 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Shoot,InputSettings.Bindings.ActionMappings.NavNorth,InputSettings.Bindings.ActionMappings.NavEast,InputSettings.Bindings.ActionMappings.NavSouth,InputSettings.Bindings.ActionMappings.NavWest,InputSettings.Bindings.ActionMappings.PGame,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Shoot,InputSettings.Bindings.ActionMappings.NavNorth,InputSettings.Bindings.ActionMappings.NavEast,InputSettings.Bindings.ActionMappings.NavSouth,InputSettings.Bindings.ActionMappings.NavWest,InputSettings.Bindings.ActionMappings.PGame,
 BoxComponent=BoxComponent.Physics.ConstraintsGroup,
-PaperSpriteComponent=PaperSpriteComponent.Physics.ConstraintsGroup,PaperSpriteComponent.Rendering.TextureStreaming,PaperSpriteComponent.Rendering.LOD,
+PaperSpriteComponent=PaperSpriteComponent.Rendering.LOD,PaperSpriteComponent.Rendering.TextureStreaming,PaperSpriteComponent.Physics.ConstraintsGroup,
 CameraComponent=CameraComponent.PostProcess.AutoExposure,
 
 [PlacementMode]
-RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/Traps/Falling_Block.Falling_Block;
+RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/Traps/Falling_B.Falling_B;
+RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/Traps/Breaking_Platform.Breaking_Platform;
 RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/Traps/Spikes.Spikes;
 RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/Traps/FallingBlocks.FallingBlocks;
 RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/BasicMobs/MushroomShooter.MushroomShooter;
@@ -1323,7 +1376,7 @@ PreviewAspectRatio=16:9
 
 [RootWindow]
 ScreenPosition=X=431.000 Y=0.000
-WindowSize=X=1416.000 Y=778.000
+WindowSize=X=1476.000 Y=838.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1340,7 +1393,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/nlfosdic/Ad_Nauseum_UE4/Ad_Nauseum/Content/Ad_Nauseum/MenuItems
+UNR=../../../../../../Users/nlfosdic/Ad_Nauseum_UE4/Ad_Nauseum/Content/Ad_Nauseum/Levels
 BRUSH=../../../../../../Users/jgagn_000/Documents/Unreal Projects/Ad_Nauseum/Content/
 FBX=../../../../../../Users/jgagn_000/Documents/Unreal Projects/Ad_Nauseum/Content/
 FBXAnim=../../../../../../Users/jgagn_000/Documents/Unreal Projects/Ad_Nauseum/Content/
