Added switch to mini, and made level 2 not a wall jump sim

--- a/Ad_Nauseum/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Ad_Nauseum/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -71,9 +71,9 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,SubsurfaceScattering=1,VisualizeSSS=0,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,SkinCache=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,CameraFrustums=0,AudioRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,WidgetComponents=1",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,SubsurfaceScattering=1,VisualizeSSS=0,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,SkinCache=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,CameraFrustums=0,AudioRadius=0,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,WidgetComponents=1",BufferVisualizationMode="",ExposureSettings=(LogOffset=0,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowFPS=False,bShowStats=False,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/Ad_Nauseum/MenuItems/MenuMap
+MRUItem0=/Game/Ad_Nauseum/Levels/Level_2
 MRUItem1=/Game/Ad_Nauseum/Levels/Level_1
-MRUItem2=/Game/Ad_Nauseum/Levels/Level_2
+MRUItem2=/Game/Ad_Nauseum/MenuItems/MenuMap
 MRUItem3=/Game/Ad_Nauseum/Levels/Level_3
 MRUItem4=/Game/Ad_Nauseum/Levels/OverworldMap
 MRUItem5=/Game/Ad_Nauseum/Levels/Overworld_Map
@@ -92,7 +92,7 @@ Common=False
 User Created=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Ad_Nauseum/Levels
+ContentBrowserTab1.SelectedPaths=/Game/Ad_Nauseum/Sprites
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -114,10 +114,15 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Ad_Nauseum/MenuItems/MenuMap
+LastLevel=/Game/Ad_Nauseum/Levels/Level_2
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Ad_Nauseum/Levels/Level_2_TMap.Level_2_TMap
+OpenAssetsAtExit=/Game/Ad_Nauseum/Blueprints/General/Slimey.Slimey
+OpenAssetsAtExit=/Game/Ad_Nauseum/Blueprints/General/Mini.Mini
+OpenAssetsAtExit=/Game/Ad_Nauseum/Blueprints/General/Ad_Nauseum_Save.Ad_Nauseum_Save
+OpenAssetsAtExit=/Game/Ad_Nauseum/Levels/Level_1_TMap.Level_1_TMap
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1609,6 +1614,62 @@ Mini_C.Cooking=True
 Mini_C.Events=True
 Mini_C.Shape=True
 Mini_C.Navigation=True
+Mini_C.ComponentTick=True
+Mini_C.Character Movement (General Settings)=True
+Mini_C.Character Movement: Walking=True
+Mini_C.Character Movement: Jumping / Falling=True
+Mini_C.Character Movement: Swimming=True
+Mini_C.Character Movement: Flying=True
+Mini_C.Character Movement: Custom Movement=True
+Mini_C.Character Movement (Rotation Settings)=True
+Mini_C.Character Movement: Physics Interaction=True
+Mini_C.Character Movement (Networking)=True
+Mini_C.Character Movement=True
+Mini_C.Character Movement: Avoidance=True
+Mini_C.Character Movement: NavMesh Movement=True
+Mini_C.NavMovement=True
+Mini_C.Velocity=True
+Mini_C.PlanarMovement=True
+Mini_C.MovementComponent=True
+REINST_Mini_C_157.TransformCommon=True
+REINST_Mini_C_157.Sprite=True
+REINST_Mini_C_157.None=True
+REINST_Mini_C_157.Tick=True
+REINST_Mini_C_157.ComponentTick=True
+REINST_Mini_C_157.Physics=True
+REINST_Mini_C_157.Collision=True
+REINST_Mini_C_157.Lighting=True
+REINST_Mini_C_157.Rendering=True
+REINST_Mini_C_157.Tags=True
+REINST_Mini_C_157.ComponentReplication=True
+REINST_Mini_C_157.Activation=True
+REINST_Mini_C_157.Variable=True
+REINST_Mini_C_157.Cooking=True
+REINST_Mini_C_157.Character=True
+REINST_Mini_C_157.Character Movement (General Settings)=True
+REINST_Mini_C_157.Character Movement: Walking=True
+REINST_Mini_C_157.Character Movement: Jumping / Falling=True
+REINST_Mini_C_157.Character Movement: Swimming=True
+REINST_Mini_C_157.Character Movement: Flying=True
+REINST_Mini_C_157.Character Movement: Custom Movement=True
+REINST_Mini_C_157.Character Movement (Rotation Settings)=True
+REINST_Mini_C_157.Character Movement: Physics Interaction=True
+REINST_Mini_C_157.Character Movement (Networking)=True
+REINST_Mini_C_157.Character Movement=True
+REINST_Mini_C_157.Character Movement: Avoidance=True
+REINST_Mini_C_157.Character Movement: NavMesh Movement=True
+REINST_Mini_C_157.NavMovement=True
+REINST_Mini_C_157.Velocity=True
+REINST_Mini_C_157.PlanarMovement=True
+REINST_Mini_C_157.MovementComponent=True
+REINST_Mini_C_157.Shape=True
+REINST_Mini_C_157.Navigation=True
+REINST_Mini_C_157.Camera=True
+REINST_Mini_C_157.Pawn=True
+REINST_Mini_C_157.Replication=True
+REINST_Mini_C_157.Input=True
+REINST_Mini_C_157.Actor=True
+Mini_C.Default=True
 
 [DetailPropertyExpansion]
 PaperFlipbook="\"Object.Sprite.KeyFrames\" \"Object.Sprite.KeyFrames.KeyFrames[0]\" "
@@ -1639,7 +1700,7 @@ SaveGame=
 PaperFlipbookComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[1].CollisionData.Shapes.Shapes[0]\" "
 WorldSettings="\"Object.Lightmass.LightmassSettings\" \"Object.Audio.DefaultReverbSettings\" \"Object.Audio.DefaultAmbientZoneSettings\" \"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].ProxySetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.MaterialSettings\" "
-Info="\"Object.Lightmass.LightmassSettings\" \"Object.Audio.DefaultReverbSettings\" \"Object.Audio.DefaultAmbientZoneSettings\" \"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].ProxySetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.MaterialSettings\" "
+Info=
 REINST_Slimey_C_436="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_Slimey_C_448="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_Slimey_C_470="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -1704,6 +1765,7 @@ REINST_Slimey_C_283="\"Object.Character.CapsuleComponent.Object.Collision.BodyIn
 /Game/2DSideScroller/Sprites/RunFrames/RunCycle_1.RunCycle_1=1
 /Game/Ad_Nauseum/Levels/Level_2_TMap.Level_2_TMap=1
 /Game/Ad_Nauseum/Blueprints/General/MiniSlimey.MiniSlimey=0
+/Game/Ad_Nauseum/Blueprints/General/Mini.Mini=0
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.Lightmass.Lightmaps,WorldSettings.GameMode.SelectedGameModeDetails,
@@ -1783,7 +1845,7 @@ PreviewAspectRatio=16:9
 
 [RootWindow]
 ScreenPosition=X=431.000 Y=0.000
-WindowSize=X=1376.000 Y=738.000
+WindowSize=X=1386.000 Y=748.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1800,7 +1862,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/jrgagnon/Ad_Nauseum_UE4/Ad_Nauseum/Content/Ad_Nauseum/Levels
+UNR=../../../../../../Users/jrgagnon/Ad_Nauseum_UE4/Ad_Nauseum/Content/Ad_Nauseum/MenuItems
 BRUSH=../../../../../../Users/jgagn_000/Documents/Unreal Projects/Ad_Nauseum/Content/
 FBX=../../../../../../Users/jgagn_000/Documents/Unreal Projects/Ad_Nauseum/Content/
 FBXAnim=../../../../../../Users/jgagn_000/Documents/Unreal Projects/Ad_Nauseum/Content/
@@ -2300,8 +2362,8 @@ MovieSceneCapture.TimeStamp=2017.01.18-17.47.24
 MovieSceneCapture.LastCompileMethod=External
 NewLevelDialog.TimeStamp=2016.12.27-21.04.59
 NewLevelDialog.LastCompileMethod=Unknown
-ExternalImagePicker.TimeStamp=2016.12.27-21.04.29
-ExternalImagePicker.LastCompileMethod=Unknown
+ExternalImagePicker.TimeStamp=2017.01.18-17.47.12
+ExternalImagePicker.LastCompileMethod=External
 BlueprintProfiler.TimeStamp=2017.01.18-17.46.58
 BlueprintProfiler.LastCompileMethod=External
 BlueprintGraph.TimeStamp=2017.01.18-17.46.58
