--- a/Ad_Nauseum/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Ad_Nauseum/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -92,7 +92,7 @@ Common=False
 User Created=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Ad_Nauseum/Blueprints/Traps
+ContentBrowserTab1.SelectedPaths=/Game/Ad_Nauseum/Blueprints/Weapons
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -117,10 +117,7 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/Ad_Nauseum/Levels/Level_1
 
 [AssetEditorManager]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/Ad_Nauseum/Blueprints/Traps/Falling_B.Falling_B
-OpenAssetsAtExit=/Game/Ad_Nauseum/Blueprints/Traps/Breaking_Platform.Breaking_Platform
-OpenAssetsAtExit=/Game/Ad_Nauseum/Blueprints/Weapons/BlueBullet.BlueBullet
+CleanShutdown=False
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1187,10 +1184,22 @@ Breaking_Platform_C.Rendering=True
 Breaking_Platform_C.Replication=True
 Breaking_Platform_C.Input=True
 Breaking_Platform_C.Actor=True
+Moving_Platform_C.Tick=True
+Moving_Platform_C.Rendering=True
+Moving_Platform_C.Replication=True
+Moving_Platform_C.Input=True
+Moving_Platform_C.Actor=True
+Moving_Platform_C.Default=True
+Moving_Platform2_C.Default=True
+Moving_Platform2_C.Tick=True
+Moving_Platform2_C.Rendering=True
+Moving_Platform2_C.Replication=True
+Moving_Platform2_C.Input=True
+Moving_Platform2_C.Actor=True
 
 [DetailPropertyExpansion]
 PaperFlipbook="\"Object.Sprite.KeyFrames\" \"Object.Sprite.KeyFrames.KeyFrames[0]\" "
-Object="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Object="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
@@ -1205,9 +1214,9 @@ REINST_Slimey_C_162="\"Object.Character.CharacterMovement.Object.NavMovement.Nav
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[5]\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ActorComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ActorComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PaperSpriteComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PaperSprite="\"Object.Sprite.Sockets\" "
@@ -1294,6 +1303,10 @@ SkinnedMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyI
 /Game/Ad_Nauseum/Blueprints/General/SlimeyStates.SlimeyStates=0
 /Game/Ad_Nauseum/Sprites/Dirt_Block_Sprite_0.Dirt_Block_Sprite_0=1
 /Game/Ad_Nauseum/Blueprints/Traps/Falling_Block.Falling_Block=1
+/Game/Ad_Nauseum/Blueprints/Traps/Moving_Platform.Moving_Platform=0
+/Game/Ad_Nauseum/Blueprints/Traps/Breaking_Platform.Breaking_Platform=0
+/Game/Ad_Nauseum/Sprites/Grass_Block_Sprite.Grass_Block_Sprite=1
+/Game/Ad_Nauseum/Blueprints/Traps/Moving_Platform2.Moving_Platform2=0
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.Lightmass.Lightmaps,WorldSettings.GameMode.SelectedGameModeDetails,
@@ -1346,12 +1359,14 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Shoot,InputSettings.Bindings.ActionMappings.NavNorth,InputSettings.Bindings.ActionMappings.NavEast,InputSettings.Bindings.ActionMappings.NavSouth,InputSettings.Bindings.ActionMappings.NavWest,InputSettings.Bindings.ActionMappings.PGame,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Shoot,InputSettings.Bindings.ActionMappings.NavNorth,InputSettings.Bindings.ActionMappings.NavEast,InputSettings.Bindings.ActionMappings.NavSouth,InputSettings.Bindings.ActionMappings.NavWest,InputSettings.Bindings.ActionMappings.PGame,
 BoxComponent=BoxComponent.Physics.ConstraintsGroup,
-PaperSpriteComponent=PaperSpriteComponent.Rendering.LOD,PaperSpriteComponent.Rendering.TextureStreaming,PaperSpriteComponent.Physics.ConstraintsGroup,
+PaperSpriteComponent=PaperSpriteComponent.Physics.ConstraintsGroup,PaperSpriteComponent.Rendering.TextureStreaming,PaperSpriteComponent.Rendering.LOD,
 CameraComponent=CameraComponent.PostProcess.AutoExposure,
 
 [PlacementMode]
-RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/Traps/Falling_B.Falling_B;
 RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/Traps/Breaking_Platform.Breaking_Platform;
+RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/Traps/Moving_Platform2.Moving_Platform2;
+RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/Traps/Moving_Platform.Moving_Platform;
+RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/Traps/Falling_B.Falling_B;
 RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/Traps/Spikes.Spikes;
 RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/Traps/FallingBlocks.FallingBlocks;
 RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/BasicMobs/MushroomShooter.MushroomShooter;
@@ -1376,7 +1391,7 @@ PreviewAspectRatio=16:9
 
 [RootWindow]
 ScreenPosition=X=431.000 Y=0.000
-WindowSize=X=1476.000 Y=838.000
+WindowSize=X=1486.000 Y=848.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
