--- a/Ad_Nauseum/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Ad_Nauseum/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -92,7 +92,7 @@ Common=False
 User Created=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Ad_Nauseum/Sprites
+ContentBrowserTab1.SelectedPaths=/Game/Ad_Nauseum/Levels
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -117,7 +117,7 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/Ad_Nauseum/Levels/Level_2
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/Ad_Nauseum/Levels/Level_2_TMap.Level_2_TMap
 OpenAssetsAtExit=/Game/Ad_Nauseum/Blueprints/General/Slimey.Slimey
 OpenAssetsAtExit=/Game/Ad_Nauseum/Blueprints/General/Mini.Mini
@@ -1700,7 +1700,7 @@ SaveGame=
 PaperFlipbookComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[1].CollisionData.Shapes.Shapes[0]\" "
 WorldSettings="\"Object.Lightmass.LightmassSettings\" \"Object.Audio.DefaultReverbSettings\" \"Object.Audio.DefaultAmbientZoneSettings\" \"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].ProxySetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.MaterialSettings\" "
-Info=
+Info="\"Object.Lightmass.LightmassSettings\" \"Object.Audio.DefaultReverbSettings\" \"Object.Audio.DefaultAmbientZoneSettings\" \"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].ProxySetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.MaterialSettings\" "
 REINST_Slimey_C_436="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_Slimey_C_448="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_Slimey_C_470="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -1768,7 +1768,7 @@ REINST_Slimey_C_283="\"Object.Character.CapsuleComponent.Object.Collision.BodyIn
 /Game/Ad_Nauseum/Blueprints/General/Mini.Mini=0
 
 [DetailCustomWidgetExpansion]
-WorldSettings=WorldSettings.Lightmass.Lightmaps,WorldSettings.GameMode.SelectedGameModeDetails,
+WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,WorldSettings.Lightmass.Lightmaps,
 GeneralProjectSettings=InputSettings.Bindings.ActionMappings.PGame,InputSettings.Bindings.ActionMappings.NavWest,InputSettings.Bindings.ActionMappings.NavSouth,InputSettings.Bindings.ActionMappings.NavEast,InputSettings.Bindings.ActionMappings.NavNorth,InputSettings.Bindings.ActionMappings.Shoot,InputSettings.Bindings.ActionMappings.Jump,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.ActionMappings,
 GameMapsSettings=InputSettings.Bindings.ActionMappings.PGame,InputSettings.Bindings.ActionMappings.NavWest,InputSettings.Bindings.ActionMappings.NavSouth,InputSettings.Bindings.ActionMappings.NavEast,InputSettings.Bindings.ActionMappings.NavNorth,InputSettings.Bindings.ActionMappings.Shoot,InputSettings.Bindings.ActionMappings.Jump,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.ActionMappings,
 MoviePlayerSettings=InputSettings.Bindings.ActionMappings.PGame,InputSettings.Bindings.ActionMappings.NavWest,InputSettings.Bindings.ActionMappings.NavSouth,InputSettings.Bindings.ActionMappings.NavEast,InputSettings.Bindings.ActionMappings.NavNorth,InputSettings.Bindings.ActionMappings.Shoot,InputSettings.Bindings.ActionMappings.Jump,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.ActionMappings,
@@ -1845,7 +1845,7 @@ PreviewAspectRatio=16:9
 
 [RootWindow]
 ScreenPosition=X=431.000 Y=0.000
-WindowSize=X=1386.000 Y=748.000
+WindowSize=X=1396.000 Y=758.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1862,7 +1862,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/jrgagnon/Ad_Nauseum_UE4/Ad_Nauseum/Content/Ad_Nauseum/MenuItems
+UNR=../../../../../../Users/jrgagnon/Ad_Nauseum_UE4/Ad_Nauseum/Content/Ad_Nauseum/Levels
 BRUSH=../../../../../../Users/jgagn_000/Documents/Unreal Projects/Ad_Nauseum/Content/
 FBX=../../../../../../Users/jgagn_000/Documents/Unreal Projects/Ad_Nauseum/Content/
 FBXAnim=../../../../../../Users/jgagn_000/Documents/Unreal Projects/Ad_Nauseum/Content/
@@ -2378,6 +2378,8 @@ PackageDependencyInfo.TimeStamp=2016.12.27-21.05.03
 PackageDependencyInfo.LastCompileMethod=Unknown
 BlueprintNativeCodeGen.TimeStamp=2016.12.27-21.04.01
 BlueprintNativeCodeGen.LastCompileMethod=Unknown
+PortalProxies.TimeStamp=2017.01.18-17.47.29
+PortalProxies.LastCompileMethod=Unknown
 
 [DetailCategoriesAdvanced]
 InputSettings.Bindings=True
