Added breaking wall

--- a/Ad_Nauseum/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Ad_Nauseum/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -92,7 +92,7 @@ Common=False
 User Created=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Ad_Nauseum/Blueprints/Weapons
+ContentBrowserTab1.SelectedPaths=/Game/Ad_Nauseum/Blueprints/Traps
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -118,6 +118,8 @@ LastLevel=/Game/Ad_Nauseum/Levels/Level_1
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Ad_Nauseum/Blueprints/Traps/Breaking_Wall.Breaking_Wall
+OpenAssetsAtExit=/Game/Ad_Nauseum/Blueprints/BasicMobs/MushroomPatrol.MushroomPatrol
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1196,10 +1198,16 @@ Moving_Platform2_C.Rendering=True
 Moving_Platform2_C.Replication=True
 Moving_Platform2_C.Input=True
 Moving_Platform2_C.Actor=True
+Breaking_Wall_C.Tick=True
+Breaking_Wall_C.Rendering=True
+Breaking_Wall_C.Replication=True
+Breaking_Wall_C.Input=True
+Breaking_Wall_C.Actor=True
+Breaking_Wall_C.Default=True
 
 [DetailPropertyExpansion]
 PaperFlipbook="\"Object.Sprite.KeyFrames\" \"Object.Sprite.KeyFrames.KeyFrames[0]\" "
-Object="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Object=
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
@@ -1307,9 +1315,10 @@ SkinnedMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyI
 /Game/Ad_Nauseum/Blueprints/Traps/Breaking_Platform.Breaking_Platform=0
 /Game/Ad_Nauseum/Sprites/Grass_Block_Sprite.Grass_Block_Sprite=1
 /Game/Ad_Nauseum/Blueprints/Traps/Moving_Platform2.Moving_Platform2=0
+/Game/Ad_Nauseum/Blueprints/Traps/Breaking_Wall.Breaking_Wall=0
 
 [DetailCustomWidgetExpansion]
-WorldSettings=WorldSettings.Lightmass.Lightmaps,WorldSettings.GameMode.SelectedGameModeDetails,
+WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,WorldSettings.Lightmass.Lightmaps,
 GeneralProjectSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Shoot,InputSettings.Bindings.ActionMappings.NavNorth,InputSettings.Bindings.ActionMappings.NavEast,InputSettings.Bindings.ActionMappings.NavSouth,InputSettings.Bindings.ActionMappings.NavWest,InputSettings.Bindings.ActionMappings.PGame,
 GameMapsSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Shoot,InputSettings.Bindings.ActionMappings.NavNorth,InputSettings.Bindings.ActionMappings.NavEast,InputSettings.Bindings.ActionMappings.NavSouth,InputSettings.Bindings.ActionMappings.NavWest,InputSettings.Bindings.ActionMappings.PGame,
 MoviePlayerSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Shoot,InputSettings.Bindings.ActionMappings.NavNorth,InputSettings.Bindings.ActionMappings.NavEast,InputSettings.Bindings.ActionMappings.NavSouth,InputSettings.Bindings.ActionMappings.NavWest,InputSettings.Bindings.ActionMappings.PGame,
@@ -1359,10 +1368,11 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Shoot,InputSettings.Bindings.ActionMappings.NavNorth,InputSettings.Bindings.ActionMappings.NavEast,InputSettings.Bindings.ActionMappings.NavSouth,InputSettings.Bindings.ActionMappings.NavWest,InputSettings.Bindings.ActionMappings.PGame,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Shoot,InputSettings.Bindings.ActionMappings.NavNorth,InputSettings.Bindings.ActionMappings.NavEast,InputSettings.Bindings.ActionMappings.NavSouth,InputSettings.Bindings.ActionMappings.NavWest,InputSettings.Bindings.ActionMappings.PGame,
 BoxComponent=BoxComponent.Physics.ConstraintsGroup,
-PaperSpriteComponent=PaperSpriteComponent.Physics.ConstraintsGroup,PaperSpriteComponent.Rendering.TextureStreaming,PaperSpriteComponent.Rendering.LOD,
+PaperSpriteComponent=PaperSpriteComponent.Rendering.LOD,PaperSpriteComponent.Rendering.TextureStreaming,PaperSpriteComponent.Physics.ConstraintsGroup,
 CameraComponent=CameraComponent.PostProcess.AutoExposure,
 
 [PlacementMode]
+RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/Traps/Breaking_Wall.Breaking_Wall;
 RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/Traps/Breaking_Platform.Breaking_Platform;
 RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/Traps/Moving_Platform2.Moving_Platform2;
 RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/Traps/Moving_Platform.Moving_Platform;
@@ -1382,7 +1392,6 @@ RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/MushroomShooter.MushroomShooter;
 RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/GreenBullet.GreenBullet;
 RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/Spikes.Spikes;
 RecentlyPlaced=/Game/Ad_Nauseum/Sprites/Placeholder_Background_Sprite.Placeholder_Background_Sprite;
-RecentlyPlaced=/Game/Ad_Nauseum/Sprites/Grass_Block_Sprite.Grass_Block_Sprite;
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1391,7 +1400,7 @@ PreviewAspectRatio=16:9
 
 [RootWindow]
 ScreenPosition=X=431.000 Y=0.000
-WindowSize=X=1486.000 Y=848.000
+WindowSize=X=1496.000 Y=858.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
